fix: scrollbar behavior

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -5,6 +5,7 @@
 html {
     font-size: 10px;
     scroll-behavior: smooth;
+    scrollbar-gutter: stable;
     @media screen and (min-width: $mobile-small-width) {
         &::-webkit-scrollbar {
           width: 0.5rem;
